--- a/gallery.html
+++ b/gallery.html
@@ -19,7 +19,7 @@
 
 <body>
     <header class="header">
-        <nav class="navbar navbar-style">
+        <nav class="navbar navbar-style navbar-fixed-top">
             <!-- <div class="container"> -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#micon">
@@ -43,7 +43,7 @@
         <img src="src/gallery2.jpeg" alt="" width="100%">
         <img src="src/gallery3.jpeg" alt="" width="100%">
     </header>
-    <footer class="page-footer gb" id="footerrr">
+    <footer class="footer navbar navbar-fixed-bottom" id="footerrr">
         <a href="" class="ftt"><img src="src/chrome.png" alt="" ></a>
         <a href="" class="ftt"><img src="src/facebook (1).png" alt=""></a>
         <a href="" class="ftt"><img src="src/instagram.png" alt=""></a>
