--- a/SignIN.html
+++ b/SignIN.html
@@ -17,7 +17,7 @@
 </head>
 <body>
       <header class="header">
-        <nav class="navbar navbar-style">
+        <nav class="navbar navbar-style navbar-fixed-top">
             <!-- <div class="container"> -->
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#micon">
@@ -62,7 +62,7 @@
                 </div>
             </div>
       </header>
-      <footer class="page-footer" id="footerrr">
+      <footer class="footer navbar navbar-fixed-bottom" id="footerrr">
         <a href="" class="ftt"><img src="src/chrome.png" alt="" ></a>
         <a href="" class="ftt"><img src="src/facebook (1).png" alt=""></a>
         <a href="" class="ftt"><img src="src/instagram.png" alt=""></a>
